# Smart-Lockers-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
components/drv/: CMakeLists.txt
components/drv/inc/: drv_gpio.h  drv_mqtt.h  drv_nvs.h  drv_webserver.h  drv_wifi.h
components/drv/src/: drv_gpio.c  drv_mqtt.c  drv_nvs.c  drv_webserver.c  drv_wifi.c
components/hal_esp/: CMakeLists.txt
components/hal_esp/src/: hal_gpio.c
components/srv/: CMakeLists.txt
components/srv/inc/: srv_button.h  srv_communication.h  srv_hmi.h  srv_mqtt.h  srv_rfid.h  srv_wifi.h
components/srv/src/: srv_button.c  srv_communication.c  srv_hmi.c  srv_mqtt.c  srv_rfid.c  srv_wifi.c
main/: CMakeLists.txt  main.c
